@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2003/05/23 21:32:25 jdolecek Exp $
+$NetBSD: distinfo,v 1.4 2003/10/24 22:00:08 jdolecek Exp $
 
-SHA1 (./opera-7.11-20030515.1-static-qt.i386.rpm) = ba3ff41e21833e26430446e3e57e17b859749983
-Size (./opera-7.11-20030515.1-static-qt.i386.rpm) = 5279902 bytes
+SHA1 (./opera-7.21-20031013.1-static-qt.i386.rpm) = 26cf95ffb6eef4018bf7ea8256e8c5efb7f46924
+Size (./opera-7.21-20031013.1-static-qt.i386.rpm) = 5076264 bytes
